tests/NormalTests/paczka1/fuzzy1/88626117.err
Error in line 8: kJJYjw7Gbyx S259 51,4
Error in line 12: S479 S743 88,0
Error in line 13: kJJYjw7Gbyx S479 51,2
Error in line 27: FpNQpldncMs S259 a5,4
Error in line 30: FpNQpldncMs S259 51,0
